--- a/client/src/main.css
+++ b/client/src/main.css
@@ -127,6 +127,11 @@ a {
 
 .card__title {
   border-bottom: 0.25rem solid #BC5276;
+  margin-bottom: 0.25rem;
+}
+
+.card__text {
+  margin-top: 0.5rem;
 }
 
 .card__list {
