--- a/client/src/sass/components/_card.scss
+++ b/client/src/sass/components/_card.scss
@@ -14,6 +14,11 @@
 
 .card__title {
     border-bottom: 0.25rem solid #BC5276;
+    margin-bottom: 0.25rem;
+}
+
+.card__text {
+    margin-top: 0.5rem;
 }
 
 .card__list {
